# my_glue

./: .coveragerc  .gitignore  README.md  pyproject.toml  run-isort.sh  run-job.sh  run-test.sh
doc/: flow.md
docs/: README.MD  docker-compose.yml
job/: create_job.py
resources/etl/: etl001.ini  etl001_fixed.ini  etl002.ini
src/my_glue/common/: base.py  base_enmu.py  config.py  exceptions.py  input_output.py  input_output_source.py  input_source.py  job_config.py  messages.py  output_source.py
src/my_glue/config/: data_check.json  env.ini  text_read.json
src/my_glue/config/etl/: etl001.ini  etl002.ini
src/my_glue/etl/: InputOutput.py  etl001.py  etl001_fixed.py  etl002.py  etl003.py
src/my_glue/utils/: conifg_utils.py  glue_utils.py  log_utils.py  redshift_utils.py  s3_utils.py  secretmanager_utils.py  sys_utils.py  time_utils.py
tests/: conftest.py
tests-resources/etl001/config/: etl001.ini  etl001_fixed.ini
tests-resources/etl002/config/: etl002.ini
tests-resources/etl002/input1/etl002/: user.csv
tests-resources/etl002/input1/path/003/: part-00000-98220b59-09dd-4812-9d5e-a218eb3c93e5-c000.gz.parquet
tests-resources/etl002/ryo-output1/path/003/: part-00000-1647258d-0492-47ad-8d61-18c92175dcda-c000.gz.parquet
tests-resources/etl003/config/: etl003.ini
tests-resources/etl003/input1/user/20231111/: user.csv  user2.csv
tests-resources/etl003/input2/address/20231111/: address.csv
tests/common/: test_base.py  test_exceptions.py  test_input_output.py
tests/etl/: test_etl001.py  test_etl001_fixed.py  test_etl002.py  test_etl003.py
tests/resources/config/: etl001.ini
tests/resources/config/common/: etl001.ini
tests/resources/etl002/config/: etl002.ini
tests/utils/: test_config_utils.py  test_glue_utils.py
tools/: s3_init.py
tools/resources/etl001/: address.csv
(+5 files in other folders)
