[tool.poetry]
name = "my_glue"
version = "0.1.0"
description = ""
authors = ["liangszzz <liang-shan@outlook.com>"]
readme = "README.md"
packages = [{include = "my_glue", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10.2"
awscli = "^1.29.26"
boto3 = "^1.28.26"
cython = "^3.0.0"
numpy = "^1.25.2"
pandas = "^2.0.3"
pytz = "^2023.3"
pyyaml = "^6.0.1"
requests = "^2.31.0"



[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-mock = "^3.10.0"
pytest-cov = "^4.1.0"
black = "^23.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120